# mindful

./: .copier-answers.yml  .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/trellens/: __init__.py  __main__.py  api.py  cli.py  config.py  configs.py  defaults.py  model.py
