[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "trellens"
requires-python = ">=3.11"
dependencies = [ "datamodel-code-generator~=0.14.0", "pyperclip~=1.8.2", "typer~=0.7.0",]
readme = "README.md"
dynamic = [ "version", "description",]
[[project.authors]]
name = "blakeNaccarato"
email = "blake.naccarato+trellens@gmail.com"

[project.urls]
Home = "https://github.com/blakeNaccarato/trellens"

[project.scripts]
trellens = "trellens.cli:app"

[project.optional-dependencies]
